--- a/index.html
+++ b/index.html
@@ -417,11 +417,13 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                            Villages
                                             <br> Your Global Partner
                                         </h1>
                                         <p class="disc" data-i18n="banner.desc">
-                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
+                                            Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="contact.html" class="rts-btn btn-primary"
@@ -445,11 +447,13 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                            Villages
                                             <br> Your Global Partner
                                         </h1>
                                         <p class="disc" data-i18n="banner.desc">
-                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
+                                            Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -469,11 +473,13 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                            Villages
                                             <br> Your Global Partner
                                         </h1>
                                         <p class="disc" data-i18n="banner.desc">
-                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
+                                            Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -493,11 +499,13 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                            Villages
                                             <br> Your Global Partner
                                         </h1>
                                         <p class="disc" data-i18n="banner.desc">
-                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
+                                            Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -578,9 +586,11 @@
                                     <img src="assets/images/about/icon/01.svg" alt="about">
                                 </div> -->
                                 <div class="right-content-wrapper">
-                                    <h2 class="counter title"><span style="color: var(--color-primary);" class="odometer" data-count="7500">00</span> <br> kcal/kg <br> ++
+                                    <h2 class="counter title"><span style="color: var(--color-primary);"
+                                            class="odometer" data-count="7500">00</span> <br> kcal/kg <br> ++
                                     </h2>
-                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter1">Excellent quality</span>
+                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter1">Excellent
+                                        quality</span>
                                 </div>
                             </div>
                             <div class="single-counter">
@@ -588,9 +598,11 @@
                                     <img src="assets/images/about/icon/02.svg" alt="about">
                                 </div> -->
                                 <div class="right-content-wrapper">
-                                    <h2 class="counter title"><span style="color: var(--color-primary);" class="odometer" data-count="1300">00</span> <br> tons/month <br> ++
+                                    <h2 class="counter title"><span style="color: var(--color-primary);"
+                                            class="odometer" data-count="1300">00</span> <br> tons/month <br> ++
                                     </h2>
-                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter2">Output production</span>
+                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter2">Output
+                                        production</span>
                                 </div>
                             </div>
                         </div>
@@ -1160,43 +1172,39 @@
                         <div class="single-nav-area-footer use-link">
                             <h4 class="title">Useful Links</h4>
                             <ul>
-                                <li><a href="about.html"><i class="fa-regular fa-arrow-right-long"></i>About Us</a></li>
-                                <li><a href="about.html"><i class="fa-regular fa-arrow-right-long"></i>Our Gallery</a>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Home</a></li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Products</a>
                                 </li>
-                                <li><a href="service.html"><i class="fa-regular fa-arrow-right-long"></i>Our
-                                        Services</a>
                                 </li>
-                                <li><a href="team.html"><i class="fa-regular fa-arrow-right-long"></i>Our Team</a></li>
-                                <li><a href="contact.html"><i class="fa-regular fa-arrow-right-long"></i>Contact Us</a>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>About Us</a>
+                                </li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Blog</a></li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Contact</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="single-nav-area-footer use-link">
                             <h4 class="title">Quick Services</h4>
                             <ul>
-                                <li><a href="service-single.html"><i class="fa-regular fa-arrow-right-long"></i>General
-                                        Contracting</a>
-                                </li>
-                                <li><a href="service-single.html"><i class="fa-regular fa-arrow-right-long"></i>Project
-                                        Management</a>
-                                </li>
-                                <li><a href="service-single.html"><i class="fa-regular fa-arrow-right-long"></i>New
-                                        Construction</a></li>
-                                <li><a href="service-single.html"><i
-                                            class="fa-regular fa-arrow-right-long"></i>Renovations
-                                        &
-                                        Remodeling</a></li>
-                                <li><a href="service-single.html"><i class="fa-regular fa-arrow-right-long"></i>Interior
-                                        Finishing</a>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>BBQ
+                                        Charcoal</a></li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Heating
+                                        Charcoal</a></li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Sawdust
+                                        Briquette Charcoal</a></li>
+                                <li><a href="#"><i class="fa-regular fa-arrow-right-long"></i>Hardwood Lump
+                                        Charcoal</a></li>
                                 </li>
                             </ul>
                         </div>
                         <div class="single-nav-area-footer news-letter">
-                            <h4 class="title">Newsletter</h4>
-                            <p>Aplications prodize before front end ortals visualize front end</p>
+                            <h4 class="title" data-i18n="newsletter.title">Newsletter</h4>
+                            <p data-i18n="newsletter.desc">Aplications prodize before front end ortals visualize front
+                                end</p>
                             <form action="#">
                                 <input type="email" placeholder="Email Address" required>
-                                <button class="btn-subscribe mt--15">Subscribe Now</button>
+                                <button class="btn-subscribe mt--15" data-i18n="newsletter.button">Subscribe
+                                    Now</button>
                             </form>
                         </div>
                     </div>
