--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     <a href="index.html" data-i18n="menu.home">Home</a>
                                 </li>
                                 <li class="main-nav">
-                                    <a href="index.html" data-i18n="menu.products">Products</a>
+                                    <a href="our-clients.html" data-i18n="menu.products">Products</a>
                                 </li>
                                 <li class="main-nav">
                                     <a href="company-history.html" data-i18n="menu.about">About Us</a>
@@ -109,7 +109,7 @@
                         <a href="index.html" class="main" data-i18n="menu.home">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="main" data-i18n="menu.products">Products</a>
+                        <a href="our-clients.html" class="main" data-i18n="menu.products">Products</a>
                     </li>
                     <li>
                         <a href="company-history.html" class="main" data-i18n="menu.about">About Us</a>
