--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav-kemixport.png">
-    <title>Kemixport - Than Sạch Từ Làng Nghề Việt Nam - Đối Tác Toàn Cầu Của Bạn</title>
+    <title>Kemixport</title>
     <!-- fontawesome css -->
     <link rel="stylesheet" preload href="assets/css/plugins/fontawesome.css">
     <link rel="stylesheet" preload href="assets/css/plugins/aos.css">
@@ -75,7 +75,7 @@
                                     <a href="index.html" data-i18n="menu.home">Home</a>
                                 </li>
                                 <li class="main-nav">
-                                    <a href="index.html" data-i18n="menu.products">Products</a>
+                                    <a href="our-clients.html" data-i18n="menu.products">Products</a>
                                 </li>
                                 <li class="main-nav">
                                     <a href="company-history.html" data-i18n="menu.about">About Us</a>
@@ -109,7 +109,7 @@
                         <a href="index.html" class="main" data-i18n="menu.home">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="main" data-i18n="menu.products">Products</a>
+                        <a href="our-clients.html" class="main" data-i18n="menu.products">Products</a>
                     </li>
                     <li>
                         <a href="company-history.html" class="main" data-i18n="menu.about">About Us</a>
