--- a/our-clients.html
+++ b/our-clients.html
@@ -266,7 +266,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
-                            <img src="assets/images/brand/01.webp" alt="brand">
+                            <img src="assets/images/brand/de_donggoi.png" alt="brand">
                             <p>
                                 Material: 5-layer carton box with PP moisture-proof liner.
                             </p>
@@ -281,7 +281,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
-                            <img src="assets/images/brand/02.webp" alt="brand">
+                            <img src="assets/images/brand/de_dôngi2.JPG" alt="brand">
                             <p>
                                 Shrink-wrapped with PE film or packed in jumbo bags as requested.
                             </p>
@@ -297,7 +297,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
-                            <img src="assets/images/brand/03.webp" alt="brand">
+                            <img src="assets/images/brand/de_jjdo.jpg" alt="brand">
                             <p>
                                 Weight: 10kg, 10.2kg, or customizable.
                             </p>
@@ -312,7 +312,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
-                            <img src="assets/images/brand/04.webp" alt="brand">
+                            <img src="assets/images/brand/de_xetai.png" alt="brand">
                             <p>
                                 Loading: Packed on fumigated wooden pallets.
                             </p>
@@ -327,7 +327,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
-                            <img src="assets/images/brand/05.webp" alt="brand">
+                            <img src="assets/images/brand/de_container.jpg" alt="brand">
                             <p>
                                 Container: 18-20 tons (20ft), 25-27 tons (40ft), with moisture-proof nylon liner.
                             </p>
