--- a/blog-grid.html
+++ b/blog-grid.html
@@ -190,7 +190,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog1.png" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.1year" class="time">1 Year Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -214,7 +214,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog2.png" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.1month" class="time">1 Month Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -238,7 +238,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog3.png" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.3months" class="time">3 Months Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -262,7 +262,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog4.jpg" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.2weeks" class="time">2 Weeks Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -286,7 +286,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog5.png" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.6months" class="time">6 Months Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -310,7 +310,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog6.png" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.1week" class="time">1 Week Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -334,7 +334,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog7.JPG" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.4months" class="time">4 Months Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -358,7 +358,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog8.JPG" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.2months" class="time">2 Months Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
@@ -381,7 +381,7 @@
                         <a href="blog-details.html" class="thumbnail">
                             <img src="assets/images/blog/blog9.JPG" alt="blog_card">
                             <div class="tag-area">
-                                <span data-i18n="blog.tag.time" class="time">2Years Ago</span>
+                                <span data-i18n="blog.tag.time.3days" class="time">3 Days Ago</span>
                                 <span data-i18n="blog.tag.location" class="location">Office</span>
                             </div>
                         </a>
